Eddited index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-<h1>Hello Git!</h1>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Hello Git!</h1>
 
 
-<div>
-    <p>Working test</p>
-    <p>another change</p>
-    <p>another change 2</p>
-</div>
-<div>
-    <p>This was added from GitHub</p>
-</div>
-<!-- some comment -->
+        <div>
+            <p>Working test</p>
+            <p>another change</p>
+            <p>another change 2</p>
+        </div>
+        <div>
+            <p>This was added from GitHub</p>
+        </div>
+        <!-- some comment -->
+    </body>
+</html>
