--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
             <p>This was added from GitHub</p>
         </div>
         <!-- some comment -->
+        <!-- some other comment -->
     </body>
 </html>
